--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,7 @@
   background-image: url("../images/img-myt-logo.jpg");
   background-repeat: no-repeat;
   margin-left: 20px;
+  padding-bottom: 10px;
   position: fixed;
   width: 1300px;
   border-bottom: 1px solid black;
