--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,34 @@
 /* start of nav stylong and positioning*/
-nav {
-  display: inline-flex;
+body {
+  margin: 0;
+  font-family: georgia, arial, sans-serif;
+  font-size 17px;
+  color: black;
 }
 
 a {
-  margin: 20px;
   color: black;
+}
+
+h2 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size> 30px;
+  font-weightL bold;
+}
+
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
+}
+
+
+/* Universal Styling for news stories*/
+
+.stories {
+  display:flex;
+  justify-content: space-between;
+  margin-top: 17px;
 }
 
 .logo {
@@ -24,10 +47,7 @@ header nav {
   padding-right: 40px;
 }
 
-nav span {
-  display: inline-block;
-  padding: 20px 10px;
-}
+
 
 /*start of flex box styling and positioning*/
 header {
@@ -70,20 +90,50 @@ header {
   width: 240px;
 }
 
-.article1{
-  border: 1px solid;
+.image.content {
+  display: flex;
+  flex-direction: column;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: left;
 }
 
+/* start of large column styling*/
+.article1{
+  display: flex;
+  background: url("../images/img-story-main.png");
+  background-repeat: no-repeat;
+  border: 1px solid;
+  width: 630px;
+}
+
+.sidearticle1 {
+  border: 1px solid;
+  display: flex;
+  background: url("../images/img-story-2.png");
+  /*background-repeat: no-repeat;*/
+  margin-top: 0;
+  height: 300px;
+}
+
+.sidearticle2 {
+  border: 1px solid;
+  display: flex;
+  background: url("../images/img-story-3.png");
+  /*background-repeat: no-repeat;*/
+  height: 300px;
+}
+
+/*start of medium column styling*/
 .article2 {
   border: 1px solid;
 }
 
 .article3 {
   border: 1px solid;
-}
-
-.article3 {
-  border: 1px solid;
+  background: url("../images/img-story-1.png");
 }
 
 .article4 {
@@ -99,13 +149,5 @@ header {
 }
 
 .sidebar {
-  border: 1px solid;
-}
-
-.sidearticle1 {
-  border: 1px solid;
-}
-
-.sidearticle2 {
   border: 1px solid;
 }
