--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,25 +31,34 @@ nav span {
   margin-top: 17px;
 }
 
-.logo {
+.stories .text-content {
+  height: 250px;
+}
+
+.story {
   display: flex;
-  align-items: center;
-  flex-grow: 1;
-  padding-left: 30px;
+  flex-direction: column;
+  width: 300px;
 }
 
-.logo span {
-  color: MediumAquamarine;
-  padding-left: 20px;
+.narative {
+  marign-top 16px;
 }
 
-header nav {
-  padding-right: 40px;
+.image-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 300px;
+  margin-top: 15px;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
 }
 
+/*Header*/
 
-
-/*start of flex box styling and positioning*/
 header {
   display: flex;
   align-items: center;
@@ -64,16 +73,34 @@ header {
   background-color: white;
 }
 
-
-/*start of flexbox positioning for articles*/
-.container {
-    display: flex;
-    margin: 0 auto 78px auto;
-    padding-top: 116px;
+.logo {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  padding-left: 30px;
 }
 
-.column.large {
-  width: 630px;
+.logo img {
+  width: 70px;
+  height: 60px;
+  margin-right: 12px;
+}
+
+.logo span {
+  color: MediumAquamarine;
+}
+
+header nav {
+  padding-right: 40px;
+}
+
+/*Main content container*/
+
+.container {
+    display: flex;
+    width: 1232px;
+    margin: 0 auto 78px auto;
+    padding-top: 116px;
 }
 
 .column {
@@ -82,72 +109,86 @@ header {
   margin-right: 32px;
 }
 
+.column.large {
+  width: 630px;
+}
+
+.lead-story .image-content {
+  background: url("../images/img-story-main.png");
+  width: 630px;
+  margin-top: 0;
+  text-align: left;
+  font-size: 40px;
+}
+
+.lead-story .image-content span {
+  margin-left: 20px;
+}
+.fall-cancelled.image-content {
+  background: url("../images/img-story-2.png");
+}
+
+.pop-culture.image-content {
+  background: url("../images/img-story-3.png");
+}
+
+/*Second News Column*/
+
 .column.medium {
   width: 300px;
 }
+
+.cat-ceo.image-content {
+  background: url("../images/img-story-1.png");
+}
+
+/*Third News Column*/
 
 .column.small {
   width: 240px;
 }
 
-.image.content {
-  display: flex;
-  flex-direction: column;
-  font-family: Georgia;
+img.cookie {
+  height: 240px;
+}
+
+.news-bites h3 {
+  margin-bottom: 41px;
+  font-size: 16px;
   font-weight: bold;
-  font-size: 30px;
+  text-align: center;
+}
+
+.bite span {
+  padding-left: 11px;
+}
+
+/*Footer*/
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 325px;
+  background-color: mediumaquamarine;
+  margin: auto;
+  font-family: verdana arial sans-serif;
+  font: 12px;
+}
+
+footer .title {
+  display: inline-block;
+  padding-right: 25px;
+  border-right: 2px solid white;
+  font-family: georgia times serif;
+  font-size: 16px;
+  font-weight: bold;
   color: white;
-  text-align: left;
 }
 
-/* start of large column styling*/
-.article1{
-  display: flex;
-  background: url("../images/img-story-main.png");
-  background-repeat: no-repeat;
-  border: 1px solid;
-  width: 630px;
-}
-
-.sidearticle1 {
-  border: 1px solid;
-  display: flex;
-  background: url("../images/img-story-2.png");
-  /*background-repeat: no-repeat;*/
-  margin-top: 0;
-  height: 300px;
-}
-
-.sidearticle2 {
-  border: 1px solid;
-  display: flex;
-  background: url("../images/img-story-3.png");
-  /*background-repeat: no-repeat;*/
-  height: 300px;
-}
-
-/*start of medium column styling*/
-.article2 {
-  border: 1px solid;
-}
-
-.article3 {
-  border: 1px solid;
-  background: url("../images/img-story-1.png");
-}
-
-.article4 {
-  border: 1px solid;
-}
-
-.article5 {
-  border: 1px solid;
-}
-
-.cookie {
-  border: 1px solid;
-}
-
-.sidebar {
-  border: 1px solid;
+footer nav {
+  display: inline-block;
+  padding-left: 25px;
 }
